--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
 }
 
 .tela{
+    display: flex;
+    flex-direction: column;
     background-color: white;
     width: 30vw;
     height: 100vh;
@@ -48,9 +50,48 @@ h3{
 }
 
 nav{
+    flex: 1 1 0;
     width: 17vw;
     text-align: center;
     padding: 5px;
+}
+
+input{
+    width: 26vw;
+    height: 2vw;
+    padding: 0.5vw 1vw;
+    margin: 0.7vw;
+}
+
+.textOnInput {
+    position: relative;
+}
+.textOnInput label {
+    position: absolute;
+    top: -7%;
+    left: 10%;
+    padding: 2px;
+    z-index: 1;
+}
+.textOnInput label:after {
+    content: " ";
+    background-color: #fff;
+    width: 100%;
+    height: 13px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+}
+label {
+    font: 1.1vw 'Roboto 400', sans-serif;
+    font-weight: 500;
+    display: inline-block;
+    margin-bottom: .5rem;
+}
+.form-control {
+    box-shadow: none !important;
+
 }
 
 .button_link{
