--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,13 @@ h4{
     position: relative;
 }
 
+#alunos_selecionados{
+    width: 26.1vw;
+    height: 8vw;
+    padding: 0.5vw 1vw;
+    margin: 0.7vw;
+}
+
 #listaAlunos{
     display: none;
     width: 95%;
