--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ h4{
     position: absolute;
 }
 
-#listaAlunos li a{
+#listaAlunos li span{
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -229,9 +229,10 @@ h4{
     border: 1px solid #ddd;
     background-color: #f6f6f6;
     padding: 2px;
+    cursor: pointer;
 }
 
-#listaAlunos li a:hover{
+#listaAlunos li span:hover{
     background: #eee;
 }
 
