--- a/css/style.css
+++ b/css/style.css
@@ -241,3 +241,8 @@ h4{
 }
 
 /*-incluido por agis -*/
+
+.button_link.selected {
+    background-color: #00ff00; /* Cor de fundo verde para a ocorrência selecionada */
+    color: #ffffff; /* Cor do texto branco para a ocorrência selecionada */
+}
