Encaminhar para a página de registro_confirmado e Alteração da cor da ocorrencia selecionada

--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,6 @@ h4{
 /*-incluido por agis -*/
 
 .button_link.selected {
-    background-color: #00ff00; /* Cor de fundo verde para a ocorrência selecionada */
+    background-color: #223820; /* Cor de fundo verde para a ocorrência selecionada */
     color: #ffffff; /* Cor do texto branco para a ocorrência selecionada */
 }
