--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
     background-color: #F2F2F2;
 }
 
+#email{
+    font-size: medium;
+    color:#223820;
+}
 .tela{
     display: flex;
     flex-direction: column;
