--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 
 body {
     background-color: #F2F2F2;
+    width: auto;
+    height: auto;
 }
 
 #email{
@@ -15,7 +17,7 @@ body {
     flex-direction: column;
     background-color: white;
     width: 30vw;
-    height: 100vh;
+    height: auto;
     margin: 0px auto;
 }
 
@@ -257,4 +259,38 @@ h4{
 .button_link.selected {
     background-color: #223820; /* Cor de fundo verde para a ocorrência selecionada */
     color: #ffffff; /* Cor do texto branco para a ocorrência selecionada */
+}
+
+
+
+/*------------@Media -------------------------*/
+
+@media screen and (max-width: 1366px) and (max-height: 768px) {
+    .tela {
+        width: 100%; /* Ajustando a largura para ocupar toda a largura da tela */
+        height: auto; /* Definindo a altura como automática para se ajustar ao conteúdo */
+        margin: 0; /* Removendo as margens laterais */
+    }
+
+    nav {
+        width: 100%; /* Ajustando a largura para ocupar toda a largura da tela */
+    }
+
+    input {
+        width: 100%; /* Ajustando a largura para ocupar toda a largura da tela */
+    }
+
+    .button_link,
+    .button_serie,
+    .button_atribuir {
+        width: 100%; /* Ajustando a largura para ocupar toda a largura da tela */
+    }
+
+    #alunos_selecionados {
+        width: 100%; /* Ajustando a largura para ocupar toda a largura da tela */
+    }
+
+    #listaAlunos {
+        width: 100%; /* Ajustando a largura para ocupar toda a largura da tela */
+    }
 }
