--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 *{margin: 0; padding: 0;}
 
 body {
-    background-color: #f61c1c;
+    background-color: #f9f6f6;
     margin: auto;
     width: 50vh;
     height: 90vh;
