--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h3{
 }
 
 nav{
-    background-color: aqua;
+    background-color: rgb(255, 255, 255);
     flex: 1 1 1;
     width: auto;
     text-align: center;
